--- a/T02Web/index.html
+++ b/T02Web/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>  
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Web.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/T02Web.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
